[gd_scene load_steps=3 format=3 uid="uid://con1wfa3wg5dy"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_u7ccl"]

[sub_resource type="LabelSettings" id="LabelSettings_xpdxe"]
line_spacing = 35.0
font_size = 35

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u7ccl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -191.0
offset_right = 191.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_xpdxe")
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings (Not Implemented)"

[node name="MasterVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MusicVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Music Volume - Need Seperate Audio Bus"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
value = 50.0

[node name="SoundVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sound Effects Volume"
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
value = 50.0

[connection signal="button_down" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="value_changed" from="Panel/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
